# socoolblockchain

./: .breakpoints  README.md  blockchain.json  blocked_urls.json  db.sqlite3  keys.json  owned_coins.json  peers.json  personal_data.json  pyproject.toml  unspent_coins.json
eggcoin/: __init__.py  admin.py  apps.py  coin_methods.py  models.py  script.py  urls.py  views.py
eggcoin/migrations/: 0001_initial.py  0002_auto_20210526_0238.py  0003_block_chain_index.py  0004_auto_20210526_1707.py
eggcoin/templates/: coin_count.html  index.html  transaction_form.html
mysite/: settings.py  urls.py
